# AutoTwitter

./: .gitignore  README.md  manage-bot.sh  monitor-bot.sh
ai/: __init__.py  content_generator.py  rss_engagement_generator.py
bot/: __init__.py  client.py
config/: email_config.yml
core/: config.py  security.py
email_pipeline/: __init__.py  pipeline.py
integrations/: twitter_api.py
twitter_bot/: .gitignore  __init__.py  api-usage-monitor.sh  api_usage_tracker.py  content_tracker_v2.json  manage-bot.sh  pyproject.toml  rate_limit_optimizer.py  requirements.txt
twitter_bot/ai/: content_source_manager.py  trend_analyzer.py  unified_client.py  web_scraper.py
twitter_bot/background/: __init__.py  scheduler.py
twitter_bot/config/: brand.yml  rss_feeds.yml
twitter_bot/core/: content_tracker.py  content_tracker_v2.py  database.py
twitter_bot/email_pipeline/: profile_analyzer.py  smtp_client.py
twitter_bot/integrations/: oauth_server.py  twitter_oauth.py
